@@ -1,3 +1,9 @@
+2007-10-08  Dan Winship  <danw@gnome.org>
+
+	* libsoup/soup-nossl.c: Update for current soup-ssl.h prototypes
+
+	* tests/proxy-test.c (run_test): wrap https tests in #if HAVE_SSL
+
 2007-10-05  Dan Winship  <danw@gnome.org>
 
 	* configure.in: 2.2.101
